20180917: Fixed overlap list employee name overflow issue.

--- a/src/sass/vacation-request.scss
+++ b/src/sass/vacation-request.scss
@@ -207,8 +207,12 @@
         td {
             vertical-align: middle;
 
-            .user-icon {
-                max-height: 25px;
+            .user-image {
+                display: inline-block;
+
+                img {
+                    max-height: 25px;
+                }
             }
 
             .valign {
